2007-08-11 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: s/Local Network/People nearby/
	(Sjoerd Simons)

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: Unselect accounts when
	clicking on "add" button. Fixes bug #459173 (Cosimo Cecchi).

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-presence-chooser.glade: add some spacing in
	"Custom message" dialog. Fixes bug #465360 (Frederic Peters).

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-presence-chooser.c:
	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy/empathy-presence.c: Add hidden supprot. Fixes bug #455510
	(Cosimo Cecchi).

	* data/gtalk.profile:
	* data/jabber.profile:
	* data/salut.profile:
	* data/irc.profile:
	* data/msn.profile: Updated to use SupportedPresences field.

2007-08-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-presence-chooser.glade:
	* libempathy-gtk/empathy-presence-chooser.c:
	* libempathy-gtk/empathy-status-presets.c:
	* libempathy-gtk/empathy-status-presets.h:
	* libempathy-gtk/empathy-ui-utils.c: Remove per-state
	"Custom message..." item and add one on the bottom of the menu. Add
	a combobox on the custom message dialog to select the state and change
	the action of the checkbox, now it add/remove the message from saved
	messages. Make easier to add other states to the list if needed.
	Fixes bug #460678.

2007-08-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-presence.c:
	* libempathy/empathy-idle.c:
	* configure.ac: Remove workaround for mc-enum-types.h not being
	installed by MC and bump MC minimal version to 4.33.

2007-08-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-preferences.c:
	* libempathy-gtk/empathy-preferences.glade: Useless spell checker
	option. Fixes bug #459164 (Cosimo Cecchi).
